Fixed menu not closing on mobile view and minor padding adjustments

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -27,6 +27,10 @@ h3 {
     margin-top: 30px;
 }
 
+#twitter {
+    padding-bottom: 40px;
+}
+
 #github h4, #twitter h4 {
     font-weight: 600;
     margin: 0;
@@ -109,6 +113,10 @@ div#sub {
 
 div#sub .fa {
     color: @dark-green;
+}
+
+#logo {
+    margin-bottom: 40px;
 }
 
 #logo img {
